Page Name Update

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/scripts.js"></script>
-    <title>OLIVER CHIOETTO</title>
+    <title>JOSÉ ISRAEL</title>
 </head>
 <body onresize="updateWindowResize()">
     <nav>
         <div id="header">
-            <div class="header-title">OLIVER CHIOETTO</div>
+            <div class="header-title">JOSÉ ISRAEL</div>
             <div class="header-subtitle">PROGRAMADOR | MODELADOR</div>
             <a href="javascript:void(0);" id="button" onclick="dropMenuFunction()"></a>
         </div>
