--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </content>
 
     <footer>
-        <h1>PORTFÓLIO DE OLIVER CHIOETTO.</h1>
+        <h1>PORTFÓLIO DE JOSÉ ISRAEL.</h1>
     </footer>
 </body>
 </html>
